Infrastructure/Kubernetes/projects/mongo-express/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  template:
    metadata:
       labels:
        app.kubernetes.io/name: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app.kubernetes.io/name: mongo-express
  # type: LoadBalancer #this type makes the service external
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30080
